@@ -4,7 +4,7 @@ Known functions:
 cos,  sin,  tan,  acos,  asin,  atan, 
 cosh, sinh, tanh, acosh, asinh, atanh,
 exp,  log,  sqrt, abs,
-erf,  erfc (for float data),
+erf,  erfc, sign (for float data),
 arg,  conj, real, imag (for complex data).
 
 sfmath will work on float or complex data, but all the input and output
